--- a/sites/site_1/intended/configs/s1-leaf3.cfg
+++ b/sites/site_1/intended/configs/s1-leaf3.cfg
@@ -24,10 +24,13 @@ aaa authorization exec default local
 no enable password
 no aaa root
 !
-username arista privilege 15 role network-admin secret sha512 $6$workshop$5Llb6kE2/P4Zx.1yLwkd9QfMtazdVEPYmJG3pfgrhT2dhka.5odGw6xS19uMSerZIhi.q2krArh9Dl8qMi2B60
+username arista privilege 15 role network-admin secret sha512 $6$workshop$uiHSVETM6F81RgSOWOepvfe4ojwJg2ZF0TPoAChqaRnVLHN.CnLhqHQQBSknmYWIDXIwvKUvKLWycTYgdXpIH1
 !
 vlan 20
    name Twenty
+!
+vlan 25
+   name Twenty-five
 !
 vlan 4094
    name MLAG_PEER
@@ -44,7 +47,7 @@ interface Port-Channel2
    description SPINES_Po4
    no shutdown
    switchport
-   switchport trunk allowed vlan 20
+   switchport trunk allowed vlan 20,25
    switchport mode trunk
    mlag 2
 !
@@ -91,12 +94,12 @@ interface Vlan4094
    no shutdown
    mtu 1500
    no autostate
-   ip address 10.1.253.8/31
+   ip address 10.1.253.0/31
 !
 mlag configuration
    domain-id RACK2
    local-interface Vlan4094
-   peer-address 10.1.253.9
+   peer-address 10.1.253.1
    peer-link Port-Channel1
    reload-delay mlag 300
    reload-delay non-mlag 330
