--- a/sites/site_1/intended/structured_configs/s1-leaf3.yml
+++ b/sites/site_1/intended/structured_configs/s1-leaf3.yml
@@ -1,3 +1,4 @@
+hostname: s1-leaf3
 static_routes:
 - vrf: default
   destination_address_prefix: 0.0.0.0/0
@@ -18,7 +19,7 @@ local_users:
 - name: arista
   privilege: 15
   role: network-admin
-  sha512_password: $6$workshop$5Llb6kE2/P4Zx.1yLwkd9QfMtazdVEPYmJG3pfgrhT2dhka.5odGw6xS19uMSerZIhi.q2krArh9Dl8qMi2B60
+  sha512_password: $6$workshop$uiHSVETM6F81RgSOWOepvfe4ojwJg2ZF0TPoAChqaRnVLHN.CnLhqHQQBSknmYWIDXIwvKUvKLWycTYgdXpIH1
 vrfs:
 - name: default
   ip_routing: false
@@ -43,11 +44,14 @@ vlans:
 - id: 20
   name: Twenty
   tenant: MY_FABRIC
+- id: 25
+  name: Twenty-five
+  tenant: MY_FABRIC
 vlan_interfaces:
 - name: Vlan4094
   description: MLAG_PEER
   shutdown: false
-  ip_address: 10.1.253.8/31
+  ip_address: 10.1.253.0/31
   no_autostate: true
   mtu: 1500
 port_channel_interfaces:
@@ -63,7 +67,7 @@ port_channel_interfaces:
   type: switched
   shutdown: false
   mode: trunk
-  vlans: '20'
+  vlans: 20,25
   mlag: 2
 - name: Port-Channel4
   description: s1-host2
@@ -128,7 +132,7 @@ ethernet_interfaces:
 mlag_configuration:
   domain_id: RACK2
   local_interface: Vlan4094
-  peer_address: 10.1.253.9
+  peer_address: 10.1.253.1
   peer_link: Port-Channel1
   reload_delay_mlag: '300'
   reload_delay_non_mlag: '330'
